--- a/scss/foundation/_mixin.scss
+++ b/scss/foundation/_mixin.scss
@@ -5,6 +5,8 @@ $break-point: (
   //more-sm: 375px,
   more-md: 600px,
   //more-lg: 1025px
+  more-md2: 601px,
+  more-md3: 783px,
   more-lg: 1240px
 );
 
