--- a/scss/project/_p-gmenu.scss
+++ b/scss/project/_p-gmenu.scss
@@ -69,6 +69,20 @@
                 margin-left: 25%;
             }
         }
+        a {
+            color: #707070;
+        }
+        .sub-menu {
+            font-size: 20px;
+            margin-top: 50px;
+            li {
+                margin-left: 40px;
+                margin-bottom: 23px;
+                @include mixin.media-queries(more-lg) {
+                    margin-left: 12%;
+                }
+            }
+        }
     }
     &__menu-subtitle {
         font-size: 20px;
@@ -81,6 +95,7 @@
             }
         }
     }
+
     &__backcolor {
         background: rgba(0,0,0,0.5);
         width: 100%;
