--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ li {
   padding-top: 38px;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 @media (min-width: 1240px) {
   .p-header__search {
@@ -273,47 +274,27 @@ li {
 .p-header__search2::before {
   width: 15px;
   height: 15px;
-  top: 186px;
+  top: 52px;
   border: 1px solid;
   border-radius: 50%;
   margin-left: 10px;
 }
-@media (min-width: 601px) {
-  .p-header__search2::before {
-    top: 185px;
-  }
-}
-@media (min-width: 783px) {
-  .p-header__search2::before {
-    top: 173px;
-  }
-}
 @media (min-width: 1240px) {
   .p-header__search2::before {
-    top: 133px;
+    top: 100px;
   }
 }
 .p-header__search2::after {
   width: 8px;
   height: 6px;
-  top: 200px;
+  top: 67px;
   border-top: solid 2px;
   transform: rotate(45deg);
   margin-left: 20px;
 }
-@media (min-width: 601px) {
-  .p-header__search2::after {
-    top: 200px;
-  }
-}
-@media (min-width: 783px) {
-  .p-header__search2::after {
-    top: 186px;
-  }
-}
 @media (min-width: 1240px) {
   .p-header__search2::after {
-    top: 147px;
+    top: 115px;
   }
 }
 .p-header__area2 {
