--- a/scss/project/_p-header.scss
+++ b/scss/project/_p-header.scss
@@ -30,6 +30,7 @@
         padding-top: 38px;
         display: flex;
         justify-content: center;
+        position: relative;
         @include mixin.media-queries(more-lg) {
             padding-top: 86px;
         }
@@ -43,39 +44,27 @@
     &__search2::before {
         width: 15px;
         height: 15px;
-        top: 186px;
+        top: 52px;
         //left: 0;
         border: 1px solid;
         border-radius: 50%;
         //box-shadow: 0 0 0 2px #fff;
         margin-left: 10px;
-        @include mixin.media-queries(more-md2) {
-            top: 185px;
-        }
-        @include mixin.media-queries(more-md3) {
-            top: 173px;
-        }
         @include mixin.media-queries(more-lg) {
-            top: 133px;
+            top: 100px;
         }
 
     }
     &__search2::after {
         width: 8px;
         height: 6px;
-        top: 200px;
+        top: 67px;
         //left: 45px;
         border-top: solid 2px;
         transform: rotate(45deg);
         margin-left: 20px;
-        @include mixin.media-queries(more-md2) {
-            top: 200px;
-        }
-        @include mixin.media-queries(more-md3) {
-            top: 186px;
-        }
         @include mixin.media-queries(more-lg) {
-            top: 147px;
+            top: 115px;
         }
     }
     &__area2 {
